--- a/handout_template.tex
+++ b/handout_template.tex
@@ -1,9 +1,9 @@
 \documentclass[a4paper, 11pt,oneside]{article}
 \usepackage[
-  top=2cm,
-  bottom=2cm,
+  top=1.5cm,
+  bottom=1cm,
   left=2cm,
-  right=1cm,
+  right=1.5cm,
   headheight=17pt, % as per the warning by fancyhdr
   includehead,includefoot,
   heightrounded, % to avoid spurious underfull messages
@@ -28,15 +28,19 @@
 \begin{document}
 
 \begin{center}
-{\LARGE \textbf{Homework 1: Building ICS-OS}}
+	{\LARGE \textbf{Homework 1: Building ICS-OS}}
 \end{center}
 
 
 \section*{Objectives}
-Put your Problem statement here! Example of a Citation\cite[p.219]{Robotics}. Here's Another Citation\cite{Flueck}
+   At the end of this homework, the student should be able to:
+   \begin{itemize}
+       \item build the ICS-OS kernel and disk image and
+       \item run two ICS-OS commands.
+   \end{itemize}   
 
 \section{Investigation/Research}
-\lipsum[2]
+Put your Problem statement here! Example of a Citation\cite[p.219]{Robotics}. Here's Another Citation\cite{Flueck}
 
 \section{Alternative Solutions}
 \lipsum[3]
@@ -44,12 +48,6 @@ Put your Problem statement here! Example of a Citation\cite[p.219]{Robotics}. He
 \section{Optimum Solution}
 \lipsum[4]
 % to comment sections out, use the command \ifx and \fi. Use this technique when writing your pre lab. For example, to comment something out I would do:
-%  \ifx
-%   \begin{itemize}
-%       \item item1
-%       \item item2
-%   \end{itemize}   
-%  \fi
 
 \section{Construction/Implementation}
 \lipsum[5]
